--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,15 @@
     "psr-4": {
       "Chando\\OneSignalRestApi\\": "src/"
     }
+  },
+  "extra": {
+  "laravel": {
+    "providers": [
+      "Chando\\OneSignalRestApi\\OneSignalServiceProvider"
+    ],
+    "aliases": {
+      "OneSignal": "Chando\\OneSignalRestApi\\Facades\\OneSignal"
+    }
   }
+}
 }
